# HOA

./: .gitignore  CLAUDE.md  DETAIL.md  PLAN.md  README.md  ark_bytecode_analysis.md  settings.gradle.kts
agents/: PROGRESS.md  README.md  SUMMARY.md  api-coverage.md  harmonyos-ndk-api.md  hms-api-coverage.md  hms-hds-stub.md  hms-hds.md  native-so-compat-analysis.md  native-so-compat.md  native-support.md  pure-abc-module-build.md  pure-abc-module-integration.md  sample-in-harmonyos-analysis.md
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/app/hackeris/hoa/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/sys/systemres/abc/: environment.abc
app/src/main/cpp/: CMakeLists.txt  Makefile.musl_bridge  ace_napi_z_stub.c  build_musl_bridge.sh  bundle_bridge.c  clone_bridge.c  elf_patch.c  elf_patch_jni.c  got_patch.c  hilog_stub.c  libb.map  malloc_bridge.c  musl_stubs.c  native-lib.cpp  ohaudio_stub.c  popen_bridge.c  pthread_bridge.c  rawfile_bridge.cpp  settings_stub.c  signal_bridge.c
app/src/main/cpp/arkui/: drawable_descriptor.h
app/src/main/cpp/bundle/: ability_resource_info.h  native_interface_bundle.h
app/src/main/cpp/rawfile/: raw_dir.h  raw_file.h  raw_file_manager.h
app/src/main/cpp/rawfile/info/: application_target_sdk_version.h
app/src/main/cpp/rawfile/napi/: native_api.h
app/src/main/cpp/stub/: musl_log.h
app/src/main/cpp/stub/fortify/: fcntl.h  poll.h  socket.h  stat.h  stdio.h  stdlib.h  string.h  unistd.h
app/src/main/java/app/hackeris/hoa/: DevTestActivity.kt  HapDetailActivity.kt  HoaAbilityActivity.kt  HoaAbilitySlots.kt  HoaApplication.kt  HoaShortcutActivity.kt  MainActivity.kt  ProcessSlotManager.kt  ShareHelper.kt  UpdateChecker.kt
app/src/main/java/app/hackeris/hoa/hap/: ElfPatcher.kt  HapBundleLoader.kt  HapExtractor.kt  HapInstaller.kt  HapModels.kt
app/src/main/java/app/hackeris/hoa/hdc/: HdcDaemon.kt  HdcFileHandler.kt  HdcInstallHandler.kt  HdcProtocol.kt  HdcService.kt  HdcSession.kt  HdcShellHandler.kt
app/src/main/java/app/hackeris/hoa/logging/: LogCollector.kt  LogWriter.kt
app/src/main/res/layout/: activity_hap_detail.xml  activity_main.xml  item_hap.xml
app/src/main/res/menu/: main_toolbar.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/app/hackeris/hoa/: ExampleUnitTest.kt
docs/: ARKUI-X_PATCHES.md  BUILD.md
gradle/: libs.versions.toml
manifests/: hoa-weekly.xml
scripts/: build_all.sh  setup_arkui_x.sh  (+1 more)
(+1 files in other folders)
